Closed Bug 1737620 Opened 3 years ago Closed 3 years ago

Misc errors in unified builds prevent adding new files

Categories

(Core :: Widget: Cocoa, defect, P3)

defect
Points:
1

Tracking

()

RESOLVED FIXED
95 Branch
Iteration:
95.2 - Oct 18 - Oct 31
Tracking Status
firefox95 --- fixed

People

(Reporter: bugzilla, Assigned: bugzilla)

References

Details

Attachments

(1 file)

When working on bug 1525788, I got the build errors:

In file included from Unified_mm_widget_cocoa2.mm:119:
/Users/harry/Developer/mozilla/mozilla-unified/widget/cocoa/nsTouchBarInputIcon.mm:25:23: error: redefinition of 'kIconSize'
static const uint32_t kIconSize = 16;
^
/Users/harry/Developer/mozilla/mozilla-unified/widget/cocoa/nsMenuItemIconX.mm:42:23: note: previous definition is here
static const uint32_t kIconSize = 16;
^
In file included from Unified_mm_widget_cocoa3.mm:2:
In file included from /Users/harry/Developer/mozilla/mozilla-unified/widget/cocoa/nsWidgetFactory.mm:6:
In file included from /Users/harry/Developer/mozilla/mozilla-unified/objdir.noindex/dist/include/nsISupports.h:82:
In file included from /Users/harry/Developer/mozilla/mozilla-unified/objdir.noindex/dist/include/nsISupportsUtils.h:17:
/Users/harry/Developer/mozilla/mozilla-unified/objdir.noindex/dist/include/mozilla/RefPtr.h:49:37: error: member access into incomplete type 'mozilla::widget::NativeMenuMac'
static void AddRef(U* aPtr) { aPtr->AddRef(); }
^
/Users/harry/Developer/mozilla/mozilla-unified/objdir.noindex/dist/include/mozilla/RefPtr.h:380:61: note: in instantiation of member function 'mozilla::RefPtrTraits<mozilla::widget::NativeMenuMac>::AddRef' requested here
static void AddRef(U* aPtr) { mozilla::RefPtrTraits<U>::AddRef(aPtr); }
^
/Users/harry/Developer/mozilla/mozilla-unified/objdir.noindex/dist/include/mozilla/RefPtr.h:97:37: note: in instantiation of member function 'RefPtr<mozilla::widget::NativeMenuMac>::ConstRemovingRefPtrTraits<mozilla::widget::NativeMenuMac>::AddRef' requested here
ConstRemovingRefPtrTraits<T>::AddRef(mRawPtr);
^
/Users/harry/Developer/mozilla/mozilla-unified/widget/cocoa/nsStandaloneNativeMenu.h:22:67: note: in instantiation of member function 'RefPtr<mozilla::widget::NativeMenuMac>::RefPtr' requested here
RefPtr<mozilla::widget::NativeMenuMac> GetNativeMenu() { return mMenu; }
^
/Users/harry/Developer/mozilla/mozilla-unified/widget/cocoa/nsStandaloneNativeMenu.h:12:7: note: forward declaration of 'mozilla::widget::NativeMenuMac'
class NativeMenuMac;
^

These errors have to be fixed before I add new files in bug 1525788.

Pushed by htwyford@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6dd3e3a4becf
Fix misc errors in unified builds. r=mstange
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: