Bug 1737620 - Fix misc errors in unified builds. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D129405